--- a/glorify/index.html
+++ b/glorify/index.html
@@ -510,13 +510,10 @@
             src="../icon/arrow-down.svg" alt="Scroll down">
         </h1>
       </div>
-      <div class="">
-        <div class="Grid Grid--full">
-          <div class="Grid-cell">
-            <img class="modal-target" src="Research_Diagram.svg" alt="Desgin Thinking Process">
-          </div>
-        </div>
+      <div class="paddingM">
+        <img class="modal-target" src="Research_Diagram.svg" alt="Desgin Thinking Process">
       </div>
+
 
       <div class="paddingM">
         <div class="rowVW cardGlorify shadowBox centerVer">
@@ -3964,8 +3961,8 @@
             <div class="Grid-cell">
               <div class="element">
                 <div class="Grid">
-                  <img class="modal-target" src="Iterate_Flow_GroupPrayer_Compare.png" alt="Group prayer versions comparison
-                  ">
+                  <img class="modal-target" src="Iterate_Flow_GroupPrayer_Compare.png"
+                    alt="Group prayer versions comparison">
                 </div>
               </div>
 
@@ -3984,48 +3981,121 @@
             </h2>
           </div>
           <!-- Arrow -->
+          <div class="blankHXS"></div>
+
           <div class="TBcarousel Grid--center Grid Grid--full" aria-label="TBcarousel" Tabindex="0"
             id="TBcarouselGlorify8">
             <div class="TBslides">
               <div class="TBslidesItem slide-1" id="slide-1" aria-label="slide 1 of 2" tabindex="0">
-                <div class="Grid Grid--gutters Grid--cols-2 u-textCenter">
+                <div class="Grid Grid--gutters Grid--cols-2 u-textCenter wrapper">
                   <div class="Grid-cell">
-                    <div class="element"> <img class="widthS" src="Iterate_Flow_GroupPrayer_Create_PreviousVersion.gif"
-                        alt="New User">
+                    <div class="element displayLaptop progress">
+                      <img class="gif-toggle widthS" data-gif="Iterate_Flow_GroupPrayer_Create_PreviousVersion.gif"
+                        data-static="Iterate_Flow_GroupPrayer_Create_PreviousVersion.png"
+                        src="Iterate_Flow_GroupPrayer_Create_PreviousVersion.png" />
                     </div>
+                    <!-- displayLaptop -->
+                    <div class="element displayTablet progress">
+                      <img class="gif-toggle widthS" data-gif="Iterate_Flow_GroupPrayer_Create_PreviousVersion.gif"
+                        data-static="Iterate_Flow_GroupPrayer_Create_PreviousVersionTap.png"
+                        src="Iterate_Flow_GroupPrayer_Create_PreviousVersionTap.png" />
+                    </div>
+                    <!-- displayTablet -->
+                    <div class="element displayPhone progress">
+                      <img class="gif-toggle widthS" data-gif="Iterate_Flow_GroupPrayer_Create_PreviousVersion.gif"
+                        data-static="Iterate_Flow_GroupPrayer_Create_PreviousVersionTap.png"
+                        src="Iterate_Flow_GroupPrayer_Create_PreviousVersionTap.png" />
+                    </div>
+                    <!-- displayPhone -->
                     <div class="element">
-                      <h4> Previous version </h4>
+                      <h4> Previous version
+                      </h4>
                     </div>
                   </div>
+
                   <div class="Grid-cell">
-                    <div class="element"> <img class="widthS" src="Iterate_Flow_GroupPrayer_Create_CurrentVersion.gif"
-                        alt="New User">
+                    <div class="element displayLaptop progress">
+                      <img class="gif-toggle widthS" data-gif="Iterate_Flow_GroupPrayer_Create_CurrentVersion.gif"
+                        data-static="Iterate_Flow_GroupPrayer_Create_CurrentVersion.png"
+                        src="Iterate_Flow_GroupPrayer_Create_CurrentVersion.png" />
                     </div>
+                    <!-- displayLaptop -->
+                    <div class="element displayTablet progress">
+                      <img class="gif-toggle widthS" data-gif="Iterate_Flow_GroupPrayer_Create_CurrentVersion.gif"
+                        data-static="Iterate_Flow_GroupPrayer_Create_CurrentVersionTap.png"
+                        src="Iterate_Flow_GroupPrayer_Create_CurrentVersionTap.png" />
+                    </div>
+                    <!-- displayTablet -->
+                    <div class="element displayPhone progress">
+                      <img class="gif-toggle widthS" data-gif="Iterate_Flow_GroupPrayer_Create_CurrentVersion.gif"
+                        data-static="Iterate_Flow_GroupPrayer_Create_CurrentVersionTap.png"
+                        src="Iterate_Flow_GroupPrayer_Create_CurrentVersionTap.png" />
+                    </div>
+                    <!-- displayPhone -->
                     <div class="element">
-                      <h4> Current version </h4>
+                      <h4> Current version
+                      </h4>
                     </div>
                   </div>
                 </div>
+
+
               </div>
               <div class="TBslidesItem slide-2" id="slide-2" aria-label="slide 2 of 2" tabindex="0">
-                <div class="Grid Grid--gutters Grid--cols-2 u-textCenter">
+
+
+                <div class="Grid Grid--gutters Grid--cols-2 u-textCenter wrapper">
                   <div class="Grid-cell">
-                    <div class="element"> <img class=" widthS" src="Iterate_Flow_GroupPrayer_Join_PreviousVersion.gif"
-                        alt="New User">
+                    <div class="element displayLaptop progress">
+                      <img class="gif-toggle widthS" data-gif="Iterate_Flow_GroupPrayer_Join_PreviousVersion.gif"
+                        data-static="Iterate_Flow_GroupPrayer_Create_PreviousVersion.png"
+                        src="Iterate_Flow_GroupPrayer_Create_PreviousVersion.png" />
                     </div>
+                    <!-- displayLaptop -->
+                    <div class="element displayTablet progress">
+                      <img class="gif-toggle widthS" data-gif="Iterate_Flow_GroupPrayer_Join_PreviousVersion.gif"
+                        data-static="Iterate_Flow_GroupPrayer_Create_PreviousVersionTap.png"
+                        src="Iterate_Flow_GroupPrayer_Create_PreviousVersionTap.png" />
+                    </div>
+                    <!-- displayTablet -->
+                    <div class="element displayPhone progress">
+                      <img class="gif-toggle widthS" data-gif="Iterate_Flow_GroupPrayer_Join_PreviousVersion.gif"
+                        data-static="Iterate_Flow_GroupPrayer_Create_PreviousVersionTap.png"
+                        src="Iterate_Flow_GroupPrayer_Create_PreviousVersionTap.png" />
+                    </div>
+                    <!-- displayPhone -->
                     <div class="element">
-                      <h4> Previous version </h4>
+                      <h4> Previous version
+                      </h4>
                     </div>
                   </div>
+
                   <div class="Grid-cell">
-                    <div class="element"> <img class=" widthS" src="Iterate_Flow_GroupPrayer_Join_CurrentVersion.gif"
-                        alt="New User">
+                    <div class="element displayLaptop progress">
+                      <img class="gif-toggle widthS" data-gif="Iterate_Flow_GroupPrayer_Join_CurrentVersion.gif"
+                        data-static="Iterate_Flow_GroupPrayer_Create_CurrentVersion.png"
+                        src="Iterate_Flow_GroupPrayer_Create_CurrentVersion.png" />
                     </div>
+                    <!-- displayLaptop -->
+                    <div class="element displayTablet progress">
+                      <img class="gif-toggle widthS" data-gif="Iterate_Flow_GroupPrayer_Join_CurrentVersion.gif"
+                        data-static="Iterate_Flow_GroupPrayer_Create_CurrentVersionTap.png"
+                        src="Iterate_Flow_GroupPrayer_Create_CurrentVersionTap.png" />
+                    </div>
+                    <!-- displayTablet -->
+                    <div class="element displayPhone progress">
+                      <img class="gif-toggle widthS" data-gif="Iterate_Flow_GroupPrayer_Join_CurrentVersion.gif"
+                        data-static="Iterate_Flow_GroupPrayer_Create_CurrentVersionTap.png"
+                        src="Iterate_Flow_GroupPrayer_Create_CurrentVersionTap.png" />
+                    </div>
+                    <!-- displayPhone -->
                     <div class="element">
-                      <h4> Current version </h4>
+                      <h4> Current version
+                      </h4>
                     </div>
                   </div>
                 </div>
+
               </div>
 
             </div>
@@ -4209,7 +4279,7 @@
                 </h5>
 
                 <h5>Average Time on Task &#58; <strong class="Grey800">&#160; 25 seconds &#160;</strong></h5>
-                <h5>Error Count:&#58;<strong class="Grey800">&#160; 0 &#160;</strong></h5>
+                <h5>Error Count&#58;<strong class="Grey800">&#160; 0 &#160;</strong></h5>
 
 
               </div>
@@ -4229,7 +4299,7 @@
                 </h5>
 
                 <h5>Average Time on Task &#58; <strong class="Grey800">&#160; 13 seconds &#160;</strong></h5>
-                <h5>Error Count:&#58;<strong class="Grey800">&#160; 0 &#160;</strong></h5>
+                <h5>Error Count&#58;<strong class="Grey800">&#160; 0 &#160;</strong></h5>
 
               </div>
             </div>
@@ -4824,7 +4894,39 @@
               </div>
             </div>
           </div>
+          <div class="paddingM">
+            <div class="rowVW cardGlorifyBg shadowBox centerVer">
+              <div class="widthMax paddingM">
+                <h4>After working mainly on productivity apps, this is my initial venture into creating Faith-based Community Apps. This project has opened new doors for me into the world of spiritual social networking.
 
+
+                </h4>
+                <h4>
+                  
+                  As an individual and conceptual project, it has been a comprehensive learning journey for me. I've gone through the entire case study process, from developing research and test plans based on user and product needs to conducting interviews, iterating designs, and then repeating the process. Each iteration has brought different focal improvements.
+
+
+                </h4>
+
+                <h4>
+                  Through qualitative feedback, I've gained important insights into what users want and need. Additionally, I've set up key metrics like average time spent on the app and error rates to objectively evaluate design choices. Both qualitative and quantitative data are guiding continuous improvements.
+                </h4>
+              </div>
+              <div class="paddingleft">
+                <div class=" widthFitContent">
+                  <div class="audio-container">
+                    <audio id="myAudio2">
+                      <source src="Audio_ Outcomes.mp3">
+                      Your browser does not support the audio element.
+                    </audio>
+                    <br>
+                    <button class="Glorify play-button">Play</button>
+                    <div class="time-display">0:00 / 0:00</div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
           <div class="Grid Grid--full">
             <div class="Grid-cell">
               <div class="element">
