--- a/glorify/index.html
+++ b/glorify/index.html
@@ -307,6 +307,64 @@
     <!-- Slideshow Title -->
     <div class="wrapper">
       <div class="Grid-cell">
+        <h2 class="element">Enhancing Community Engagement in Glorify: A Journey from Individual Spirituality to
+          Collective Faith Building</h2>
+      </div>
+    </div>
+    <!-- Slideshow Title -->
+
+    <div class="paddingM wrapper">
+      <div class="rowVW cardGlorifyBg shadowBox centerVer">
+        <div class="widthMax paddingM">
+          <h4>Glorify is a mobile app offering an expansive library of resources designed to aid Christians in their
+            spiritual journey. From daily devotionals to scripture readings and prayer guides, the app aims to be a
+            one-stop shop for individual spiritual growth. However, while Glorify excels in providing content, it has
+            been primarily a solitary experience, lacking the social and community engagement crucial to Christian
+            practice.
+          </h4>
+          <h4>
+            Recognizing this gap, I embarked on an individual project in April 2023 to introduce community features that
+            align with Christian values. Completed over 36 hours, spread across 2-3 hours per day, this project has been
+            a comprehensive endeavor involving product strategy, research, and design. The first version of this feature
+            expansion will focus on a new 'Group Prayer' feature in the Discover section. This will be supplemented by
+            basic support features like chat and fellowship connections, aimed at fostering a sense of community among
+            users.
+          </h4>
+          <h4>
+            By adding these new features, this project aims to transform Glorify from a platform for individual
+            spiritual growth into a comprehensive resource for collective spiritual well-being.
+          </h4>
+        </div>
+        
+        <div class="paddingleft">
+          <div class=" widthFitContent">
+            <div class="audio-container">
+              <audio id="myAudio2">
+                <source src="Audio_ Outcomes.mp3">
+                Your browser does not support the audio element.
+              </audio>
+              <br>
+              <button class="Glorify play-button">Play</button>
+              <div class="time-display">0:00 / 0:00</div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="Grid Grid--full wrapper">
+      <div class="Grid-cell">
+        <div class="element">
+
+          <a href="https://www.figma.com/file/NuYDNgtzm7MmkrsaYeFnws/Glorify-app---Captured-in-April-2023?type=design&node-id=0%3A1&mode=design&t=RcnazEcPFtZuONYo-1" class="textUnderline" target=”_blank”>
+            <h3>View the April 2023 Glorify app interface on Figma</h3>
+          </a>
+        </div>
+      </div>
+    </div>
+    <div class="blankHS"></div>
+    <!-- Slideshow Title -->
+    <div class="wrapper">
+      <div class="Grid-cell">
         <h2 class="element">Group prayer helps foster a connection among its participants</h2>
       </div>
     </div>
@@ -4897,19 +4955,21 @@
           <div class="paddingM">
             <div class="rowVW cardGlorifyBg shadowBox centerVer">
               <div class="widthMax paddingM">
-                <h4>After working mainly on productivity apps, this is my initial venture into creating Faith-based Community Apps. This project has opened new doors for me into the world of spiritual social networking.
-
-
+                <h4>After working mainly on productivity apps, this is my initial venture into creating Faith-based
+                  Community Apps. This project has opened new doors for me into the world of spiritual social
+                  networking.
                 </h4>
                 <h4>
-                  
-                  As an individual and conceptual project, it has been a comprehensive learning journey for me. I've gone through the entire case study process, from developing research and test plans based on user and product needs to conducting interviews, iterating designs, and then repeating the process. Each iteration has brought different focal improvements.
-
-
+                  As an individual and conceptual project, it has been a comprehensive learning journey for me. I've
+                  gone through the entire case study process, from developing research and test plans based on user and
+                  product needs to conducting interviews, iterating designs, and then repeating the process. Each
+                  iteration has brought different focal improvements.
                 </h4>
-
                 <h4>
-                  Through qualitative feedback, I've gained important insights into what users want and need. Additionally, I've set up key metrics like average time spent on the app and error rates to objectively evaluate design choices. Both qualitative and quantitative data are guiding continuous improvements.
+                  Through qualitative feedback, I've gained important insights into what users want and need.
+                  Additionally, I've set up key metrics like average time spent on the app and error rates to
+                  objectively evaluate design choices. Both qualitative and quantitative data are guiding continuous
+                  improvements.
                 </h4>
               </div>
               <div class="paddingleft">
