--- a/glorify/index.html
+++ b/glorify/index.html
@@ -213,30 +213,57 @@
 
     <div class="ProjectBanner displayLaptop">
       <img src="Mockup.png" alt="GLORIFY">
-      <div class="ProjectBannerInner">
+      <div class="ProjectBannerInnerND">
+        <img class="widthXXS" src="Logo_Glorify.png" alt="GLORIFY">
+
+        <h2><strong>Enhancing Community Engagement in Glorify</strong> </h2>
+        <h3 class="Grid Grid--center colorBlack">A Journey from Individual Spirituality to
+          Collective Faith Building</h3>
         <a href="https://www.figma.com/proto/vyaxcMop5XlC6W1g37NA3Q/Community---Glorify?page-id=332%3A16494&node-id=332-19611&viewport=1671%2C430%2C0.04&scaling=scale-down&starting-point-node-id=332%3A19611"
           target="_blank"> <button class="button-35 GLORIFY">
             Slide Deck</button></a>
+            <div class="blankHXS"></div>
+            <div class="blankHXS"></div>
+
       </div>
     </div>
 
     <div class="ProjectBanner displayTablet">
       <div class="blankMin1880"></div>
       <img class="displayTablet" src="MockupS.png" alt="GLORIFY">
-      <div class="ProjectBannerInner">
+      <div class="ProjectBannerInnerND">
+        <img class="widthXXS" src="Logo_Glorify.png" alt="GLORIFY">
+
+        <h2><strong>Enhancing Community Engagement in Glorify</strong> </h2>
+        <h3 class="Grid Grid--center colorBlack">A Journey from Individual Spirituality to
+          Collective Faith Building</h3>
+
+          <div class="blankHXS"></div>
+
         <a href="https://www.figma.com/proto/vyaxcMop5XlC6W1g37NA3Q/Community---Glorify?page-id=332%3A16494&node-id=332-19611&viewport=1671%2C430%2C0.04&scaling=scale-down&starting-point-node-id=332%3A19611"
-          target="_blank"> <button class="button-35 GLORIFY">Slide Deck</button></a>
-        <div class="blankHXS"></div>
+          target="_blank"> <button class="button-35 GLORIFY">
+            Slide Deck</button></a>
+            <div class="blankHXS"></div>
+            <div class="blankHXS"></div>
       </div>
     </div>
     <div class="ProjectBanner displayPhone">
       <div class="blankMin1880"></div>
       <img class="displayPhone" src="MockupXS.png" alt="GLORIFY">
-      <div class="ProjectBannerInner">
-        <a href="https://www.figma.com/proto/vyaxcMop5XlC6W1g37NA3Q/Community---Glorify?page-id=332%3A16494&node-id=332-19611&viewport=1671%2C430%2C0.04&scaling=scale-down&starting-point-node-id=332%3A19611"
-          target="_blank"> <button class="button-35 GLORIFY">Slide Deck</button></a>
-        <div class="blankHXS"></div>
+      <div class="ProjectBannerInnerND">
+        <img class="widthXXS" src="Logo_Glorify.png" alt="GLORIFY">
 
+        <h2><strong>Enhancing Community Engagement in Glorify</strong> </h2>
+        <h3 class="Grid Grid--center colorBlack">A Journey from Individual Spirituality to
+          Collective Faith Building</h3>
+
+          <div class="blankHXS"></div>
+
+        <a href="https://www.figma.com/proto/vyaxcMop5XlC6W1g37NA3Q/Community---Glorify?page-id=332%3A16494&node-id=332-19611&viewport=1671%2C430%2C0.04&scaling=scale-down&starting-point-node-id=332%3A19611"
+          target="_blank"> <button class="button-35 GLORIFY">
+            Slide Deck</button></a>
+            <div class="blankHXS"></div>
+            <div class="blankHXS"></div>
       </div>
     </div>
   </div>
@@ -335,12 +362,12 @@
             spiritual growth into a comprehensive resource for collective spiritual well-being.
           </h4>
         </div>
-        
+
         <div class="paddingleft">
           <div class=" widthFitContent">
             <div class="audio-container">
-              <audio id="myAudio2">
-                <source src="Audio_ Outcomes.mp3">
+              <audio id="myAudio1">
+                <source src="Audio_Overview.mp3">
                 Your browser does not support the audio element.
               </audio>
               <br>
@@ -355,7 +382,8 @@
       <div class="Grid-cell">
         <div class="element">
 
-          <a href="https://www.figma.com/file/NuYDNgtzm7MmkrsaYeFnws/Glorify-app---Captured-in-April-2023?type=design&node-id=0%3A1&mode=design&t=RcnazEcPFtZuONYo-1" class="textUnderline" target=”_blank”>
+          <a href="https://www.figma.com/file/NuYDNgtzm7MmkrsaYeFnws/Glorify-app---Captured-in-April-2023?type=design&node-id=0%3A1&mode=design&t=RcnazEcPFtZuONYo-1"
+            class="textUnderline" target=”_blank”>
             <h3>View the April 2023 Glorify app interface on Figma</h3>
           </a>
         </div>
@@ -589,7 +617,7 @@
           <div class="paddingleft">
             <div class="widthFitContent">
               <div class="audio-container">
-                <audio id="myAudio1">
+                <audio id="myAudio2">
                   <source src="Audio_Intro.mp3">
                   Your browser does not support the audio element.
                 </audio>
@@ -693,7 +721,7 @@
             <div class="paddingleft">
               <div class=" widthFitContent">
                 <div class="audio-container">
-                  <audio id="myAudio2">
+                  <audio id="myAudio3">
                     <source src="Audio_Understand.mp3">
                     Your browser does not support the audio element.
                   </audio>
@@ -2311,7 +2339,7 @@
             <div class="paddingleft">
               <div class=" widthFitContent">
                 <div class="audio-container">
-                  <audio id="myAudio2">
+                  <audio id="myAudio4">
                     <source src="Audio_Design.mp3">
                     Your browser does not support the audio element.
                   </audio>
@@ -3362,7 +3390,7 @@
             <div class="paddingleft">
               <div class=" widthFitContent">
                 <div class="audio-container">
-                  <audio id="myAudio2">
+                  <audio id="myAudio5">
                     <source src="Audio_Iterate.mp3">
                     Your browser does not support the audio element.
                   </audio>
@@ -4465,7 +4493,7 @@
             <div class="paddingleft">
               <div class=" widthFitContent">
                 <div class="audio-container">
-                  <audio id="myAudio2">
+                  <audio id="myAudio6">
                     <source src="Audio_Prototype.mp3">
                     Your browser does not support the audio element.
                   </audio>
@@ -4975,8 +5003,8 @@
               <div class="paddingleft">
                 <div class=" widthFitContent">
                   <div class="audio-container">
-                    <audio id="myAudio2">
-                      <source src="Audio_ Outcomes.mp3">
+                    <audio id="myAudio7">
+                      <source src="Audio_Outcomes.mp3">
                       Your browser does not support the audio element.
                     </audio>
                     <br>
