--- a/glorify/index.html
+++ b/glorify/index.html
@@ -222,8 +222,8 @@
         <a href="https://www.figma.com/proto/vyaxcMop5XlC6W1g37NA3Q/Community---Glorify?page-id=332%3A16494&node-id=332-19611&viewport=1671%2C430%2C0.04&scaling=scale-down&starting-point-node-id=332%3A19611"
           target="_blank"> <button class="button-35 GLORIFY">
             Slide Deck</button></a>
-            <div class="blankHXS"></div>
-            <div class="blankHXS"></div>
+        <div class="blankHXS"></div>
+        <div class="blankHXS"></div>
 
       </div>
     </div>
@@ -238,13 +238,13 @@
         <h3 class="Grid Grid--center colorBlack">A Journey from Individual Spirituality to
           Collective Faith Building</h3>
 
-          <div class="blankHXS"></div>
+        <div class="blankHXS"></div>
 
         <a href="https://www.figma.com/proto/vyaxcMop5XlC6W1g37NA3Q/Community---Glorify?page-id=332%3A16494&node-id=332-19611&viewport=1671%2C430%2C0.04&scaling=scale-down&starting-point-node-id=332%3A19611"
           target="_blank"> <button class="button-35 GLORIFY">
             Slide Deck</button></a>
-            <div class="blankHXS"></div>
-            <div class="blankHXS"></div>
+        <div class="blankHXS"></div>
+        <div class="blankHXS"></div>
       </div>
     </div>
     <div class="ProjectBanner displayPhone">
@@ -257,13 +257,13 @@
         <h3 class="Grid Grid--center colorBlack">A Journey from Individual Spirituality to
           Collective Faith Building</h3>
 
-          <div class="blankHXS"></div>
+        <div class="blankHXS"></div>
 
         <a href="https://www.figma.com/proto/vyaxcMop5XlC6W1g37NA3Q/Community---Glorify?page-id=332%3A16494&node-id=332-19611&viewport=1671%2C430%2C0.04&scaling=scale-down&starting-point-node-id=332%3A19611"
           target="_blank"> <button class="button-35 GLORIFY">
             Slide Deck</button></a>
-            <div class="blankHXS"></div>
-            <div class="blankHXS"></div>
+        <div class="blankHXS"></div>
+        <div class="blankHXS"></div>
       </div>
     </div>
   </div>
@@ -334,8 +334,7 @@
     <!-- Slideshow Title -->
     <div class="wrapper">
       <div class="Grid-cell">
-        <h2 class="element">Enhancing Community Engagement in Glorify: A Journey from Individual Spirituality to
-          Collective Faith Building</h2>
+        <h2 class="element">Project overview</h2>
       </div>
     </div>
     <!-- Slideshow Title -->
@@ -367,7 +366,7 @@
           <div class=" widthFitContent">
             <div class="audio-container">
               <audio id="myAudio1">
-                <source src="Audio_Overview.mp3">
+                <source src="Audio_01_Overview.mp3">
                 Your browser does not support the audio element.
               </audio>
               <br>
@@ -604,21 +603,24 @@
       <div class="paddingM">
         <div class="rowVW cardGlorify shadowBox centerVer">
           <div class="widthMax paddingM">
-            <h4> Glorify is a Christian mobile app with a large collection of spiritual content for individuals.
-              However, it's missing social and community features, which limits its use for daily worship. I'm working
-              to add community options to improve the user experience.
+            <h4> To address the current lack of social and community features, I am focused on enhancing the user
+              experience by integrating community options.
+
             </h4>
-            <h4>
-              Begin by learning why Christians value community, then brainstorm and test potential solutions. Study
-              Glorify's existing app structure, integrate the new community features and refine through testing.
-              Ultimately, aims to enhance the group worship experience.
+            <h4>The first step involves understanding why community holds a significant value within Christian practice.
+              Following this, brainstorming and testing of potential solutions are carried out. An in-depth study of
+              Glorify's existing app architecture will be conducted to seamlessly integrate the new community features.
+              These additions will undergo design refinement through multiple rounds of testing and iteration.
+
             </h4>
+            <h4>Ultimately, the objective is to enrich the group worship experience, encouraging users to form
+              meaningful connections.</h4>
           </div>
           <div class="paddingleft">
             <div class="widthFitContent">
               <div class="audio-container">
                 <audio id="myAudio2">
-                  <source src="Audio_Intro.mp3">
+                  <source src="Audio_02_Intro.mp3">
                   Your browser does not support the audio element.
                 </audio>
                 <br>
@@ -722,7 +724,7 @@
               <div class=" widthFitContent">
                 <div class="audio-container">
                   <audio id="myAudio3">
-                    <source src="Audio_Understand.mp3">
+                    <source src="Audio_03_Understand.mp3">
                     Your browser does not support the audio element.
                   </audio>
                   <br>
@@ -2340,7 +2342,7 @@
               <div class=" widthFitContent">
                 <div class="audio-container">
                   <audio id="myAudio4">
-                    <source src="Audio_Design.mp3">
+                    <source src="Audio_04_Design.mp3">
                     Your browser does not support the audio element.
                   </audio>
                   <br>
@@ -3391,7 +3393,7 @@
               <div class=" widthFitContent">
                 <div class="audio-container">
                   <audio id="myAudio5">
-                    <source src="Audio_Iterate.mp3">
+                    <source src="Audio_05_Iterate.mp3">
                     Your browser does not support the audio element.
                   </audio>
                   <br>
@@ -4494,7 +4496,7 @@
               <div class=" widthFitContent">
                 <div class="audio-container">
                   <audio id="myAudio6">
-                    <source src="Audio_Prototype.mp3">
+                    <source src="Audio_06_Prototype.mp3">
                     Your browser does not support the audio element.
                   </audio>
                   <br>
@@ -5004,7 +5006,7 @@
                 <div class=" widthFitContent">
                   <div class="audio-container">
                     <audio id="myAudio7">
-                      <source src="Audio_Outcomes.mp3">
+                      <source src="Audio_07_Outcomes.mp3">
                       Your browser does not support the audio element.
                     </audio>
                     <br>
