--- a/glorify/index.html
+++ b/glorify/index.html
@@ -361,7 +361,6 @@
             spiritual growth into a comprehensive resource for collective spiritual well-being.
           </h4>
         </div>
-
         <div class="paddingleft">
           <div class=" widthFitContent">
             <div class="audio-container">
@@ -380,11 +379,12 @@
     <div class="Grid Grid--full wrapper">
       <div class="Grid-cell">
         <div class="element">
-
-          <a href="https://www.figma.com/file/NuYDNgtzm7MmkrsaYeFnws/Glorify-app---Captured-in-April-2023?type=design&node-id=0%3A1&mode=design&t=RcnazEcPFtZuONYo-1"
-            class="textUnderline" target=”_blank”>
-            <h3>View the April 2023 Glorify app interface on Figma</h3>
-          </a>
+          <div class="element">
+            <a href="https://www.figma.com/file/NuYDNgtzm7MmkrsaYeFnws/Glorify-app---Captured-in-April-2023?type=design&node-id=0%3A1&mode=design&t=RcnazEcPFtZuONYo-1"
+              class="textUnderline" target=”_blank”>
+              <h3>View the April 2023 Glorify app interface on Figma</h3>
+            </a>
+          </div>
         </div>
       </div>
     </div>
