--- a/xiaobaobeeii/index.html
+++ b/xiaobaobeeii/index.html
@@ -181,7 +181,7 @@
   <div class="wrapper">
     <div class="Grid Grid--gutters Grid--1of2 Grid--center u-textCenter">
       <div class="Grid-cell">
-        <img class="moveUpDown widthLogo" src="../../icon/arrow-accordion-up.svg" alt="se-arrow">
+        <img class="moveUpDown widthLogo" src="../icon/arrow-up.svg" alt="se-arrow">
         <div class="element">
           <h3 class="Grid Grid--center colorBlack">Click the button
             above to open the case study</h3>
