--- a/application_info/index.html
+++ b/application_info/index.html
@@ -234,7 +234,7 @@
       <div class="Grid-cell">
         <div class="element">
           <div class="ClipboardBoxIconOnly">
-            <button class="ClipboardIconOnly" contenteditable="true">
+            <button class="ClipboardIconOnly">
               <img class="iconMax hoverGrey100 paddingXL borderRadiusMax" title="Copy to Clipboard"
                 src="../icon/in.svg">
               <p class="clickIconCopy">https://www.linkedin.com/in/vicky-wyq/
@@ -246,7 +246,7 @@
       <div class="Grid-cell">
         <div class="element">
           <div class="ClipboardBoxIconOnly">
-            <button class="ClipboardIconOnly" contenteditable="true">
+            <button class="ClipboardIconOnly">
               <img class="iconMax hoverGrey100 paddingXL borderRadiusMax" title="Copy to Clipboard"
                 src="../icon/git.svg">
               <p class="clickIconCopy">https://github.com/vicky-wyq
@@ -258,7 +258,7 @@
       <div class="Grid-cell">
         <div class="element">
           <div class="ClipboardBoxIconOnly">
-            <button class="ClipboardIconOnly" contenteditable="true">
+            <button class="ClipboardIconOnly">
               <img class="iconMax hoverGrey100 paddingXL borderRadiusMax" title="Copy to Clipboard"
                 src="../icon/LOGO.svg">
               <p class="clickIconCopy">https://vickywang.me/
@@ -270,7 +270,7 @@
       <div class="Grid-cell">
         <div class="element">
           <div class="ClipboardBoxIconOnly">
-            <button class="ClipboardIconOnly" contenteditable="true">
+            <button class="ClipboardIconOnly">
               <img class="iconMax hoverGrey100 paddingXL borderRadiusMax" title="Copy WS to Clipboard"
                 src="../icon/LOGOCircle.svg">
               <p class="clickIconCopy">https://vickywang.me/worksamples/xiaobaobeeii/
@@ -283,7 +283,7 @@
       <div class="Grid-cell">
         <div class="element">
           <div class="ClipboardBoxIconOnly">
-            <button class="ClipboardIconOnly" contenteditable="true">
+            <button class="ClipboardIconOnly">
               <img class="iconMax hoverGrey100 paddingXL borderRadiusMax" title="Copy Cover Letter to Clipboard"
                 src="../icon/Document.svg">
               <div class="clickIconCopy">
